[project]
name = "xverse"
version = "1.0.5"
description = "xverse short for X uniVerse is collection of transformers for feature engineering and feature selection"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
readme = "README.md"
authors = [
    { name = "Sundar Krishnan", email = "sundarstyles89@gmail.com" },
    { name = "Prasanna", email = "prassee@prassee.me" },
]

requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=6.29.5"]

[project.urls]
Homepage = "https://github.com/Sundar0989/XuniVerse"
